--- a/codegen-parent/pom.xml
+++ b/codegen-parent/pom.xml
@@ -16,13 +16,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <codegen.version>0.0.1-SNAPSHOT</codegen.version>
-        <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
-        <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
-        <maven-pmd-plugin-version>3.11.0</maven-pmd-plugin-version>
-        <maven-javadoc-plugin-version>3.0.1</maven-javadoc-plugin-version>
+        <maven-plugin-plugin.version>3.9.0</maven-plugin-plugin.version>
+        <maven-surefire-plugin-version>3.1.2</maven-surefire-plugin-version>
+        <maven-pmd-plugin-version>3.21.0</maven-pmd-plugin-version>
+        <maven-javadoc-plugin-version>3.6.0</maven-javadoc-plugin-version>
         <maven-source-plugin-version>3.0.1</maven-source-plugin-version>
         <maven-project-info-reports-plugin-version>3.0.0</maven-project-info-reports-plugin-version>
         <maven-jxr-plugin-version>3.0.0</maven-jxr-plugin-version>
@@ -30,7 +30,7 @@
         <antlr.version>4.7</antlr.version>
         <swingx-version>1.6.1</swingx-version>
         <antlr-maven-plugin-version>4.7.2</antlr-maven-plugin-version>
-        <log4j.version>2.8.2</log4j.version>
+        <log4j.version>2.17.0</log4j.version>
         <clover-maven-plugin-version>4.3.1</clover-maven-plugin-version>
         <junit-version>5.4.0</junit-version>
         <dependency.locations.enabled>false</dependency.locations.enabled>
@@ -69,8 +69,7 @@
                 <configuration>
                     <show>package</show>
                     <nohelp>false</nohelp>
-                    <sourcepath>src/main/java</sourcepath>
-                    <sourcepath>target/generated-sources/antlr4</sourcepath>
+                    <sourcepath>${project.basedir}/src/main/java;${project.basedir}/target/generated-sources/antlr4</sourcepath>
                     <quiet>true</quiet>
                 </configuration>
                 <executions>
@@ -97,6 +96,11 @@
 
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -129,8 +133,7 @@
                 <configuration>
                     <show>private</show>
                     <nohelp>false</nohelp>
-                    <sourcepath>src/main/java</sourcepath>
-                    <sourcepath>target/generated-sources/antlr4</sourcepath>
+                    <sourcepath>${project.basedir}/src/main/java;${project.basedir}/target/generated-sources/antlr4</sourcepath>
                 </configuration>
             </plugin>
 
