--- a/codegen-generator/pom.xml
+++ b/codegen-generator/pom.xml
@@ -13,9 +13,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+<!--        <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.target>1.8</maven.compiler.target>-->
     </properties>
 
     <build>
@@ -30,7 +30,8 @@
                             <goal>antlr4</goal>
                         </goals>
                         <configuration>
-                            <encoding>UTF-8</encoding>
+                            <inputEncoding>UTF-8</inputEncoding>
+                            <outputEncoding>UTF-8</outputEncoding>
                             <listener>true</listener>
                             <visitor>true</visitor>
                         </configuration>
