--- a/codegen-gui/pom.xml
+++ b/codegen-gui/pom.xml
@@ -105,7 +105,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>hellofx/org.openjfx.App</mainClass>
+                    <mainClass>de.chrlembeck.codegen.gui.CodeGenGui</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -129,22 +129,22 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>17.0.0.1</version>
+            <version>17.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>17.0.0.1</version>
+            <version>17.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>19</version>
+            <version>17.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>19</version>
+            <version>17.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
