--- a/antlr-editorkit/pom.xml
+++ b/antlr-editorkit/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.6</version>
+        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
