--- a/codegen-modeller/pom.xml
+++ b/codegen-modeller/pom.xml
@@ -56,8 +56,12 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.13.1.1</version>
-            <!-- <scope>test</scope> -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbytools</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
