--- a/codegen-parent/pom.xml
+++ b/codegen-parent/pom.xml
@@ -33,6 +33,7 @@
         <log4j.version>2.20.0</log4j.version>
         <clover-maven-plugin-version>4.3.1</clover-maven-plugin-version>
         <junit-version>5.4.0</junit-version>
+        <derby.version>10.16.1.1</derby.version>
         <dependency.locations.enabled>false</dependency.locations.enabled>
         <pmd.rules.def>../build-properties/pmd-rules.xml</pmd.rules.def>
     </properties>
@@ -259,6 +260,18 @@
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>${junit-version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>${derby.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derbytools</artifactId>
+                <version>${derby.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
